Fix score display spacing to separate score from emoji pattern

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,9 @@ header {
     display: flex;
     align-items: center;
 }
+.score-display > div:first-child {
+    margin-right: 10px;
+}
 .score-1 {
     background-color: #6aaa64;
     color: #121213;
